fix logout area viewport bug on mobile safari

--- a/client/src/common/components/Sidebar/styles.sass
+++ b/client/src/common/components/Sidebar/styles.sass
@@ -4,7 +4,8 @@
   width: 5rem
   user-select: none
   background-color: colors.$lighter-background
-  height: 100%
+  height: 100dvh
+  max-height: 100dvh
   display: flex
   flex-direction: column
   align-items: center
